hphp/hack/test/typecheck/references/call_time_reference1.php.exp
File "call_time_reference1.php", line 4, characters 12-14:
Call-time pass-by-reference is not allowed (Parsing[1006])
